# purrlude

./: Numeric.dot  README.md  purrlude.cabal
Purrlude/Algebra/: Group.hs  IntegralDomain.hs  Monoid.hs  Ring.hs  Scalable.hs  Semigroup.hs  Semiring.hs  VectorSpace.hs
Purrlude/Data/: Free.hs  Tuple.hs
Purrlude/Number/: Vector.hs
src/: Prelude.hs  Purrlude.hs
src/Algebra/: Group.hs  IntegralDomain.hs  Monoid.hs  Ring.hs  Scalable.hs  Semimodule.hs  Semiring.hs  VectorSpace.hs
src/Number/: Peano.hs  Quaternion.hs  Vector.hs
tst/: ClassLaws.hs  Properties.hs  Test.hs  TypeLaws.hs
