cabal-version:      2.4
name:               purrlude
version:            0.1.0.0
synopsis:           experimental alternatives for prelude things

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             crumbtoo
maintainer:         crumb@duck.com

-- A copyright notice.
-- copyright:
-- category:

library
    exposed-modules:  Purrlude
                    , Algebra.Group
                    , Algebra.Monoid
                    , Algebra.Semiring
                    , Algebra.Ring
                    , Algebra.VectorSpace
                    , Algebra.Semimodule
                    , Number.Peano
                    , Number.Vector
                    , Number.Quaternion

    other-modules: Prelude

    default-extensions: NoImplicitPrelude

    -- Modules included in this library but not exported.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite purrlude-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tst

    other-modules:    Properties
                    , TypeLaws
                    , ClassLaws

    main-is:          Test.hs
    build-depends:    base ^>=4.16.4.0
                    , QuickCheck
                    , quickcheck-classes
                    , purrlude

